--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 
 
 .main-content{
-  margin-top: 0.75rem;
+  /* margin-top: 0.; */
 }
 :root{
   background-color: #1f2028;
@@ -35,7 +35,7 @@
   display: none;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 640px) {
   .sidebar-sec{
     display: none;
   }
@@ -48,8 +48,8 @@
 }
 
 
-@media only screen and (max-width: 360px) {
+@media only screen and (max-width: 400px) {
   .video-card{
-    width:85vw;
+    width:100%;
   }
 }
